// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Default Snapshot 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-12"
  >
    <div
      className="title"
    >
      <h1>
        
      </h1>
      <div
        className="buttons pull-right"
      />
    </div>
  </div>
</div>
`;

exports[`Title With data Snapshot 1`] = `
<div
  className="row"
>
  <div
    className="col-sm-12"
  >
    <div
      className="title"
    >
      <h1>
        label
      </h1>
      <div
        className="buttons pull-right"
      />
    </div>
  </div>
</div>
`;
